--- a/lunch-blog.html
+++ b/lunch-blog.html
@@ -10,17 +10,24 @@
 <body>
     <div class="container-fluid text-center">
         <div class="row">
-            <div class="col-9">
+            <div class="col-7">
                 <h1>
                     Spicy Chicken Sandwhich
                 </h1>
                 <br>
                 <h2>
+                    9.5/10
                 </h2>
-                9.5/10
+                "Very solid, best with mayo and jalapenos"
             </div>
             <div class="col">
-                example 2
+                <h1>
+                    Spicy Chicken Salad
+                </h1>
+                <br>
+                <h2>
+                    8.5/10
+                </h2>
             </div>
         </div>
     </div>
