--- a/countdown.html
+++ b/countdown.html
@@ -1,13 +1,95 @@
-<p id="countdown1"></p>
-<script>
-    var countDownDate = new Date("May 25, 2023 14:30:00").getTime();
-    var x = setInterval(function() {
-        var now = new Date().getTime();
-        var distance = countDownDate - now;
-        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (100 * 60 * 60))
-        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-        document.getElementById("countdown1").innerHTML = days + "d " + hours +"h " + minutes + "m " + seconds + "s ";
-}, 1000);
-</script>
+<head>
+    <title>Skinner Event Countdown</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+
+
+
+<div class="container-lgtext-center countdowns">
+    <h1>End of School</h1>
+    <p id="countdown1" class="countdown"></p>
+    <script>
+        var countDownDate = new Date("May 25, 2023 14:30:00").getTime();
+        var x = setInterval(function() {
+            var now = new Date().getTime();
+            var distance = countDownDate - now;
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+            document.getElementById("countdown1").innerHTML = days + "d " + hours +"h " + minutes + "m " + seconds + "s ";
+    }, 1000);
+    </script>
+</div>
+
+<div class="calander container-lg">
+    <div class="row day-of-week">
+        <div class="col weekday cal-col ">Sunday</div>
+        <div class="col weekday cal-col ">Monday</div>
+        <div class="col weekday cal-col ">Tuesday</div>
+        <div class="col weekday cal-col ">Wednesday</div>
+        <div class="col weekday cal-col ">Thursday</div>
+        <div class="col weekday cal-col ">Friday</div>
+        <div class="col weekday cal-col ">Saturday</div>
+    </div>
+    <div class="row">
+        <div class="col cal-col">26</div>
+        <div class="col cal-col">27</div>
+        <div class="col cal-col">28</div>
+        <div class="col cal-col">1</div>
+        <div class="col cal-col">2</div>
+        <div class="col cal-col">3</div>
+        <div class="col cal-col">4</div>
+    </div>
+    <div class="row">
+        <div class="col cal-col">5</div>
+        <div class="col cal-col">6</div>
+        <div class="col cal-col">7</div>
+        <div class="col cal-col">8</div>
+        <div class="col cal-col">9</div>
+        <div class="col cal-col">10</div>
+        <div class="col cal-col">11</div>
+    </div>
+    <div class="row">
+        <div class="col cal-col">12</div>
+        <div class="col cal-col">13</div>
+        <div class="col cal-col">14</div>
+        <div class="col cal-col">15</div>
+        <div class="col cal-col">16</div>
+        <div class="col cal-col">17
+            <br>
+            Continuation Photos:
+            <br>
+            <di id="countdowndiv" class="container">
+                <p id="countdown2" class="countdown-small"></p>
+                <script>
+                var countDownDate = new Date("March 17, 2023 7:30:00").getTime();
+                var x = setInterval(function() {
+                    var now = new Date().getTime();
+                    var distance = countDownDate - now;
+                    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+                    document.getElementById("countdown2").innerHTML = days + "D " + hours +"H " + minutes + "M " + seconds + "S ";
+            }, 1000);
+            </script>
+            </div>
+        </div>
+        <div class="col cal-col">18</div>
+    </div>
+    <div class="row">
+        <div class="col cal-col">19</div>
+        <div class="col cal-col">20</div>
+        <div class="col cal-col">21</div>
+        <div class="col cal-col">22</div>
+        <div class="col cal-col">23</div>
+        <div class="col cal-col">24</div>
+        <div class="col cal-col">25</div>
+    </div>
+
+
+</div>
