--- a/countdown.html
+++ b/countdown.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script src="javascript.js"></script>
 </head>
 
 
@@ -12,16 +13,7 @@
     <h1>End of School</h1>
     <p id="countdown1" class="countdown"></p>
     <script>
-        var countDownDate = new Date("May 25, 2023 14:30:00").getTime();
-        var x = setInterval(function() {
-            var now = new Date().getTime();
-            var distance = countDownDate - now;
-            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-            document.getElementById("countdown1").innerHTML = days + "d " + hours +"h " + minutes + "m " + seconds + "s ";
-    }, 1000);
+        
     </script>
 </div>
 
@@ -65,17 +57,7 @@
             <br>
             <di id="countdowndiv" class="container">
                 <p id="countdown2" class="countdown-small"></p>
-                <script>
-                var countDownDate = new Date("March 17, 2023 7:30:00").getTime();
-                var x = setInterval(function() {
-                    var now = new Date().getTime();
-                    var distance = countDownDate - now;
-                    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-                    document.getElementById("countdown2").innerHTML = days + "D " + hours +"H " + minutes + "M " + seconds + "S ";
-            }, 1000);
+                <script>            
             </script>
             </div>
         </div>
