--- a/countdown.html
+++ b/countdown.html
@@ -12,12 +12,90 @@
 <div class="container-lgtext-center countdowns">
     <h1>End of School</h1>
     <p id="countdown1" class="countdown"></p>
-    <script>
-        
-    </script>
-</div>
+    <div class="row">
+        <div class="col countdown-col">
+            <br>
+            Continuation Photos: Friday, March 17
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown2" class="countdown-small"></p>
+            </div>
+        </div>
+        <div class="col countdown-col">
+            <br>
+            CMAS Math Testing Begins: Tuesday, March 21
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown3" class="countdown-small"></p>
+            </div>
+        </div>
+        <div class="col countdown-col">
+            <br>
+            CMAS Math Testing Ends: Thursday, March 23
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown4" class="countdown-small"></p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col countdown-col">
+            <br>
+            Spring Break Begins: Monday, March 27
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown5" class="countdown-small"></p>
+            </div>
+        </div>
+        <div class="col countdown-col">
+            <br>
+            Spring Break Ends: Tuesday, April 4
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown6" class="countdown-small"></p>
+            </div>
+        </div>
+        <div class="col countdown-col">
+            <br>
+            Language Arts CMAS Begins, April 11
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown7" class="countdown-small"></p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col countdown-col">
+            <br>
+            Language Arts CMAS Ends, April 13
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown8" class="countdown-small"></p>
+            </div>
+        </div>
+        <div class="col countdown-col">
+            <br>
+            Science CMAS Begins, April  19
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown9" class="countdown-small"></p>
+            </div>
+        </div>
+        <div class="col countdown-col">
+            <br>
+            Science CMAS Ends, April  20
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown10" class="countdown-small"></p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col countdown-cols">
 
-<div class="calander container-lg">
+        </div>
+    </div>
+<!--<div class="calander container-lg">
     <div class="row day-of-week">
         <div class="col weekday cal-col ">Sunday</div>
         <div class="col weekday cal-col ">Monday</div>
@@ -73,5 +151,5 @@
         <div class="col cal-col">25</div>
     </div>
 
-
+-->
 </div>
