--- a/lunch-blog.html
+++ b/lunch-blog.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Frankie'sFood Review</title>
+    <title>Frankie's Food Review</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="container-fluid text-center">
+    <div class="review-title">
+        Frankie's Food Review
+    </div>
+    <br>
+    </h1>
+    <h1>
+        Short, simple reviews of the various food items offered at Skinner
+    </h1>
+    <br>
+    <div class="container text-center review-container">
         <div class="row">
-            <div class="col-7">
+            <div class="col-7 review">
                 <h1>
                     Spicy Chicken Sandwhich
                 </h1>
@@ -20,7 +29,7 @@
                 </h2>
                 "Very solid, best with mayo and jalapenos"
             </div>
-            <div class="col">
+            <div class="col review">
                 <h1>
                     Spicy Chicken Salad
                 </h1>
@@ -28,15 +37,85 @@
                 <h2>
                     8.5/10
                 </h2>
+                "Quite good as far as salads go, best with ranch and jalapenos"
             </div>
         </div>
         <div class="row">
-            <div class="col">
-
+            <div class="col review">
+                <h1>
+                    PB&J
+                </h1>
+                <br>
+                <h2>
+                    6/10
+                </h2>
+                "Its a PB&J"
             </div>
-            <div class="col-7">
-                
+            <div class="col-7 review">
+                <h1>
+                    Grilled and Seasoned Chicken
+                </h1>
+                <br>
+                <h2>
+                    10/10
+                </h2>
+                "One of the best things on the menu, should certainly come around far more often"
+            </div>
+        </div>
+        <div class="row">
+            <div class="col review">
+                <h1>
+                    Beef Soft Taco
+                </h1>
+                <br>
+                <h2>
+                    7.5/10
+                </h2>
+                "Pretty good, espectially with jalapeno and beans"
+            </div>
+            <div class="col review">
+                <h1>
+                    Spaghetti
+                </h1>
+                <br>
+                <h2>
+                    6.5/10
+                </h2>
+                "Solid, meatballs are a little dry but otherwise good, best with parmasean"
+            </div>
+            <div class="col review">
+                <h1>
+                    Nachos
+                </h1>
+                <br>
+                <h2>
+                    7.5/10
+                </h2>
+                    "Simple and good, best with beef and jalapenos"
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-7 review">
+                <h1>
+                    Pork Cubano Sandwhich
+                </h1>
+                <br>
+                <h2>
+                    9.5/10
+                </h2>
+                "Very good, doesn't need anything and should definately be brought back more"
+            </div>
+            <div class="col review">
+                <h1>
+                    Pizza
+                </h1>
+                <br>
+                <h2>
+                    6.5/10 - 8/10
+                </h2>
+                "Has good range, the sausage is a solid 8.5, the pepperoni a 7.0, and the cheese a 6.5"
             </div>
         </div>
     </div>
+
 </body>
