--- a/index.html
+++ b/index.html
@@ -8,24 +8,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<h1>Westsite</h1>
+<br>
 <div class="container-fluid">
   <div id="carouselExample" class="carousel slide" data-bs-ride = "carousel">
     <div class="carousel-inner">
       <a href="lunch-blog.html">
         <div class="carousel-item active border border-dark">
           Frankie's Food Review
-          <img src="img/chicken-quesedilla.jpg" class="d-block center" alt="#">
+          <img src="img/MichilinStar.png" class="d-block center" alt="#" id="rating-icon">
+          <br>
+          <button type="button" class="btn btn-secondary">Click Here</button>
+          <br>
         </div>
       </a>
       <a href="countdown.html">
         <div class="carousel-item">
           Skinner Event Countdown Calander
-          <img src="img/countdown-image.jpg" class="d-block center" alt="#">
+          <img src="img/Calander.png" class="d-block center" alt="#" id="calander-icon">
+          <br>
+          <button type="button" class="btn btn-secondary">Click Here</button>
+          <br>
         </div>
       </a>
-      <div class="carousel-item">
-        example 3
-      </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -37,7 +42,14 @@
     </button>
   </div>
 </div>
-<div class="container text-center" id="my-columns">
+<div class="container text-center">
+  <br>
+  <div class="text-center" id="disclaimer">
+    This website was made as part of an academic mentorship, and it is important to note that in regards to to the food review, all opinions were Frankie's, and therefore any issues with them should be taken up with him.
+  </div>  
+</div>
+
+<!-- <div class="container text-center" id="my-columns">
   <div class="row">
     <div class="col">
       Column
@@ -85,7 +97,7 @@
     </div>
   </div>
 </div>
-
+-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
