--- a/countdown.html
+++ b/countdown.html
@@ -2,14 +2,19 @@
     <title>Skinner Event Countdown</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
     <script src="javascript.js"></script>
 </head>
 
 
 
-
 <div class="container-lgtext-center countdowns">
+    <a href="index.html" id="back">
+        <div>
+            <i class="bi bi-arrow-left"></i>
+        </div>
+    </a>
     <h1>End of School</h1>
     <p id="countdown1" class="countdown"></p>
     <div class="row">
@@ -91,65 +96,33 @@
         </div>
     </div>
     <div class="row">
-        <div class="col countdown-cols">
-
-        </div>
-    </div>
-<!--<div class="calander container-lg">
-    <div class="row day-of-week">
-        <div class="col weekday cal-col ">Sunday</div>
-        <div class="col weekday cal-col ">Monday</div>
-        <div class="col weekday cal-col ">Tuesday</div>
-        <div class="col weekday cal-col ">Wednesday</div>
-        <div class="col weekday cal-col ">Thursday</div>
-        <div class="col weekday cal-col ">Friday</div>
-        <div class="col weekday cal-col ">Saturday</div>
-    </div>
-    <div class="row">
-        <div class="col cal-col">26</div>
-        <div class="col cal-col">27</div>
-        <div class="col cal-col">28</div>
-        <div class="col cal-col">1</div>
-        <div class="col cal-col">2</div>
-        <div class="col cal-col">3</div>
-        <div class="col cal-col">4</div>
-    </div>
-    <div class="row">
-        <div class="col cal-col">5</div>
-        <div class="col cal-col">6</div>
-        <div class="col cal-col">7</div>
-        <div class="col cal-col">8</div>
-        <div class="col cal-col">9</div>
-        <div class="col cal-col">10</div>
-        <div class="col cal-col">11</div>
-    </div>
-    <div class="row">
-        <div class="col cal-col">12</div>
-        <div class="col cal-col">13</div>
-        <div class="col cal-col">14</div>
-        <div class="col cal-col">15</div>
-        <div class="col cal-col">16</div>
-        <div class="col cal-col">17
+        <div class="col countdown-col">
             <br>
-            Continuation Photos:
+            No School, May 15 
             <br>
-            <di id="countdowndiv" class="container">
-                <p id="countdown2" class="countdown-small"></p>
-                <script>            
-            </script>
+            <div id="countdowndiv" class="container">
+                <p id="countdown11" class="countdown-small"></p>
             </div>
         </div>
-        <div class="col cal-col">18</div>
+        <div class="col countdown-col">
+            <br>
+            8th Grade Barbeque, May 22nd
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown12" class="countdown-small"></p>
+            </div>
+        </div>
+        <div class="col countdown-col">
+            <br>
+            Elitches, May 24th
+            <br>
+            <div id="countdowndiv" class="container">
+                <p id="countdown13" class="countdown-small"></p>
+            </div>
+        </div>
     </div>
     <div class="row">
-        <div class="col cal-col">19</div>
-        <div class="col cal-col">20</div>
-        <div class="col cal-col">21</div>
-        <div class="col cal-col">22</div>
-        <div class="col cal-col">23</div>
-        <div class="col cal-col">24</div>
-        <div class="col cal-col">25</div>
+        <h1>Continuation</h1>
+    <p id="countdown14" class="countdown"></p>
     </div>
-
--->
 </div>
