--- a/lunch-blog.html
+++ b/lunch-blog.html
@@ -4,10 +4,16 @@
     <title>Frankie's Food Review</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <a href="index.html" id="back">
+        <div>
+            <i class="bi bi-arrow-left"></i>
+        </div>
+    </a>
     <div class="review-title">
         Frankie's Food Review
     </div>
